design setup completed

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-home></app-home>
+<app-home *ngIf="!auth.userLoggedIn()"></app-home>
+<app-header  *ngIf="auth.userLoggedIn()"></app-header>
+<router-outlet *ngIf="auth.userLoggedIn()"></router-outlet>
