private chat implemented successfully

--- a/Frontend/src/app/chatarea/chatarea.component.html
+++ b/Frontend/src/app/chatarea/chatarea.component.html
@@ -1,5 +1,5 @@
 
-<div class="app-main" style="width: 1100px;">
+<div  class="app-main" style="width: 1100px;">
     <div class="app-profile-box">
         <div class="app-profile-box-name">
          {{user.name}}
@@ -7,7 +7,7 @@
         </div>
        
       </div>
-    <div class="chat-wrapper">
+    <div  class="chat-wrapper">
       <!-- <div class="message-wrapper reverse">
         <img class="message-pp" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="profile-pic">
         <div class="message-box-wrapper">
@@ -26,13 +26,22 @@
           <span>9h ago</span>
         </div>
       </div> -->
-      <div *ngFor="let item of messageArray" class="message-wrapper reverse">
+      <div  *ngFor="let item of messageArray"  >
+      <div *ngIf="item.user==user.email" class="message-wrapper ">
         <div class="message-box">
           <span>{{item.message}}</span>
-         
+         <br>
+          <span style="color: rgb(0, 0, 0);" >{{item.time}}</span>
         </div>
-        <span>{{item.user}}</span>
       </div>
+      <div *ngIf="item.user!==user.email" class="message-wrapper reverse">
+        <div class="message-box">
+          <span>{{item.message}}</span>
+         <br>
+          <span style="color: rgb(0, 0, 0);" >{{item.time}}</span>
+        </div>
+      </div>
+    </div>
     </div>
     <form (submit)="sendMsg()" class="chat-input-wrapper">
       
@@ -42,8 +51,8 @@
           <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
         </svg>
       </button>
-      <div class="input-wrapper">
-        <input type="text" name="msg" [(ngModel)]="msg" class="chat-input" placeholder="Enter your message here">
+      <div  class="input-wrapper">
+        <input  type="text" name="msg" [(ngModel)]="msg" class="chat-input" placeholder="Enter your message here">
         <button class="emoji-btn">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-smile" viewBox="0 0 24 24">
           <defs/>
