--- a/Frontend/src/app/chatlist/chatlist.component.html
+++ b/Frontend/src/app/chatlist/chatlist.component.html
@@ -44,4 +44,23 @@
               </div>
               </li>
             </ul>
-          </div> 
+</div> 
+
+<div class="chat-list-wrapper" >
+  <div class="chat-list-header">Groups <span class="c-number">{{gcount}}  </span> 
+    <svg class="list-header-arrow" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="feather feather-chevron-up" viewBox="0 0 24 24">
+      <defs/>
+      <path d="M18 15l-6-6-6 6"/>
+    </svg>
+    <button class="btn btn-outline-primary" (click)="createGroup()">Create Group</button>
+  </div>
+  <ul *ngFor="let group of group" class="chat-list active">
+    <li style=" display: flex;
+    justify-content: space-between;" class="chat-list-item active">
+    <div>
+      <img src="https://images.unsplash.com/photo-1587080266227-677cc2a4e76e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="chat"> 
+      <span  class="chat-list-name">{{group.name}}</span>
+    </div>
+    </li>
+  </ul>
+</div> 
