--- a/Frontend/src/app/chatlist/chatlist.component.html
+++ b/Frontend/src/app/chatlist/chatlist.component.html
@@ -55,7 +55,7 @@
     <!-- modal -->
     <div style="padding-left: 25px;">
                 
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+      <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#myModal">
         Create Group
       </button>
     </div>
@@ -93,7 +93,7 @@
     justify-content: space-between;" class="chat-list-item active">
     <div>
       <img src="https://images.unsplash.com/photo-1587080266227-677cc2a4e76e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="chat"> 
-      <span  class="chat-list-name">{{group.name}}</span>
+      <span (click)="chatGroup(group)" class="chat-list-name">{{group.name}}</span>
     </div>
     </li>
   </ul>
