--- a/Frontend/src/app/chatarea/chatarea.component.html
+++ b/Frontend/src/app/chatarea/chatarea.component.html
@@ -61,12 +61,9 @@
       </div>
     </div>
     </div>
-    <button (click)="sendImage()" class="chat-attachment-btn">
-      <input type="file"  name="image" [(ngModel)]="imagemodel" id="input" (change)="onFileSelected($event)"  required accept="image/*"> 
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-paperclip" viewBox="0 0 24 24">
-        <defs/>
-        <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
-      </svg>
+    <button class="chat-attachment-btn" >
+      <input type="file"  name="image" [(ngModel)]="imagemodel" id="input" (change)="onFileSelected($event)"  required accept="image/*">        
+      <button  type="submit" (click)="sendImage()"  class="chat-send-btn"></button>
     </button>
     <form (submit)="sendMsg()" class="chat-input-wrapper">
       <div  class="input-wrapper">
@@ -151,12 +148,9 @@
     </div>
   </div>
   </div>
-  <button (click)="sendGroupImage()" class="chat-attachment-btn">
-    <input type="file"  name="image" [(ngModel)]="imagemodel" id="input" (change)="onFileSelected($event)"  required accept="image/*"> 
-    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-paperclip" viewBox="0 0 24 24">
-      <defs/>
-      <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48"/>
-    </svg>
+  <button class="chat-attachment-btn" >
+    <input type="file"  name="image" [(ngModel)]="imagemodel" id="input" (change)="onFileSelected($event)"  required accept="image/*">        
+    <button  type="submit" (click)="sendGroupImage()"  class="chat-send-btn"></button>
   </button>
   <form (submit)="sendGroupMsg()" class="chat-input-wrapper">
     <div  class="input-wrapper">
