--- a/Frontend/src/app/chatlist/chatlist.component.html
+++ b/Frontend/src/app/chatlist/chatlist.component.html
@@ -1,6 +1,8 @@
 <div *ngFor="let user of user">
 <div  *ngIf="email==user.email" class="app-profile-box">
-  <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2250&q=80" alt="profile">
+  <span style="color: white;" class="material-icons">
+    person
+    </span>
   <div  class="app-profile-box-name">
     {{user.name}}
 
@@ -25,9 +27,11 @@
               justify-content: space-between;"  *ngIf="email!==user.email" class="chat-list-item active">
               <div>
 
-                <img src="https://images.unsplash.com/photo-1587080266227-677cc2a4e76e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="chat">
+                <span class="material-icons">
+                  person
+                  </span>
                 
-                <span (click)="chatUser(user)"  class="chat-list-name">{{user.name}}</span>
+                <span style="margin-left: 3mm;" (click)="chatUser(user)"  class="chat-list-name">{{user.name}}</span>
               </div>
 
 
@@ -92,8 +96,10 @@
     <li style=" display: flex;
     justify-content: space-between;" class="chat-list-item active">
     <div>
-      <img src="https://images.unsplash.com/photo-1587080266227-677cc2a4e76e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="chat"> 
-      <span (click)="chatGroup(group)" class="chat-list-name">{{group.name}}</span>
+      <span class="material-icons">
+        groups
+        </span>
+      <span style="margin-left: 3mm;" (click)="chatGroup(group)" class="chat-list-name">{{group.name}}</span>
     </div>
     </li>
   </ul>
